fix deprecation